start responsive and form

--- a/src/blocks/modules/gallery/gallery.scss
+++ b/src/blocks/modules/gallery/gallery.scss
@@ -35,6 +35,10 @@
         .gallery__item {
             width: calc(33.3333% - 8px);
             height: 303px;
+            @media (max-width: 767px) {
+                width: calc(50% - 8px);
+                height: 150px;
+            }
         }
     }
 
@@ -43,12 +47,24 @@
         .gallery__item {
             width: calc(66.6666% - 8px);
             height: 307px;
+            @media (max-width: 767px) {
+                width: 100%;
+                height: 150px;
+            }
 
             &:nth-child(4n+2) {
                 width: calc(33.3333% - 8px);
+                @media (max-width: 767px) {
+                    width: calc(50% - 8px);
+                    height: 150px;
+                }
             }
             &:nth-child(4n+3) {
                 width: calc(33.3333% - 8px);
+                @media (max-width: 767px) {
+                    width: calc(50% - 8px);
+                    height: 150px;
+                }
             }
         }
     }
