--- a/src/blocks/modules/likeItem/likeItem.scss
+++ b/src/blocks/modules/likeItem/likeItem.scss
@@ -6,6 +6,10 @@
     border-radius: 24px;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.16);
     background-color: $white;
+    @media (max-width: 767px) {
+        padding: 0;
+        box-shadow: none;
+    }
 
     &__btn {
         display: flex;
