--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -30,7 +30,7 @@
             }
         }
 
-        .btn {
+        .btn--dark {
             width: 352px;
             margin: auto;
             @media(max-width: 1023px) {
