--- a/src/blocks/modules/document-list/document-list.scss
+++ b/src/blocks/modules/document-list/document-list.scss
@@ -1,8 +1,11 @@
 .document-list {
     margin-bottom: 24px;
 
-    h5 {
+    h2 {
+        font-size: 24px;
+        line-height: 1.33;
         margin-bottom: 24px;
+        font-weight: $font-weight-bold;
     }
 
     &__item {
@@ -16,6 +19,10 @@
         &:last-of-type {
             border-bottom: 0;
             padding-bottom: 16px;
+        }
+        @media (max-width: 767px) {
+            padding-left: 0;
+            padding-right: 0;
         }
 
         &:after {
@@ -39,9 +46,19 @@
             z-index: 2;
             margin: -1px -16px 0;
             padding: 17px 64px 16px 16px;
+            @media (max-width: 767px) {
+                margin-left: 0;
+                margin-right: 0;
+                box-shadow: none;
+                padding-left: 0;
+                padding-right: 0;
+            }
 
             &:after {
                 display: block;
+                @media (max-width: 767px) {
+                    display: none;
+                }
             }
         }
     }
