--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -7,11 +7,17 @@
         .swiper-button-prev {
             left: 16px;
             pointer-events: all;
+            @media (max-width: 1023px) {
+                opacity: 1;
+            }
         }
 
         .swiper-button-next {
             right: 16px;
             pointer-events: all;
+            @media (max-width: 1023px) {
+                opacity: 1;
+            }
         }
 
         .thumbs-slider__main {
@@ -24,11 +30,18 @@
 
         .thumbs-slider__nav {
             opacity: 1;
+            @media (max-width: 767px) {
+                opacity: 0;
+                pointer-events: none;
+            }
         }
 
         .thumbs-slider__zoom {
             top: 24px;
             opacity: 1;
+            @media (max-width: 767px) {
+                top: 12px;
+            }
         }
     }
 
@@ -40,9 +53,17 @@
 
         &-prev {
             left: -80px;
+            @media (max-width: 1023px) {
+                opacity: 0;
+                left: 0;
+            }
         }
         &-next {
             right: -80px;
+            @media (max-width: 1023px) {
+                opacity: 0;
+                right: 0;
+            }
         }
     }
 
@@ -58,11 +79,13 @@
         backdrop-filter: blur(5px);
         background-color: rgba(26, 26, 26, 0.6);
         border-radius: 50%;
-
         color: $white;
         font-size: rem(14);
         line-height: 1.43;
         text-align: center;
+        @media (max-width: 767px) {
+            top: 12px;
+        }
     }
 
     &__main {
@@ -103,6 +126,7 @@
                 top: 50%;
                 left: 50%;
                 max-width: 100%;
+                height: 100%;
                 max-height: 100%;
                 transform: translate(-50%, -50%);
             }
@@ -167,6 +191,7 @@
                 top: 50%;
                 left: 50%;
                 max-width: 100%;
+                height: 100%;
                 max-height: 100%;
                 transform: translate(-50%, -50%);
             }
