--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -2,7 +2,9 @@
     padding-top: 32px;
     padding-bottom: 64px;
     position: relative;
-
+    @media (max-width: 767px) {
+        padding-top: 16px;
+    }
     .progress {
         display: flex;
         position: fixed;
@@ -33,6 +35,12 @@
 
         &-title {
             margin-bottom: 40px;
+            @media (max-width: 767px) {
+                font-size: rem(32);
+                line-height: 1.25;
+                margin-bottom: 24px;
+                text-align: left;
+            }
         }
 
         &-info {
@@ -40,12 +48,19 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 32px;
+            @media (max-width: 767px) {
+                margin-bottom: 24px;
+                justify-content: space-around;
+            }
 
             &-item {
                 margin: 0 16px 16px;
                 font-size: rem(16);
                 line-height: 1.25;
                 color: $text-silver;
+                @media (max-width: 767px) {
+                    margin: 0 auto 0;
+                }
 
                 .icon {
                     display: inline-block;
@@ -53,6 +68,9 @@
                     height: 24px;
                     vertical-align: middle;
                     margin-right: 8px;
+                    @media (max-width: 767px) {
+                        margin-right: 4px;
+                    }
                 }
 
                 .btn {
@@ -64,6 +82,12 @@
                     line-height: 1.25;
                     color: $text-silver;
                 }
+
+                &.share {
+                    @media (max-width: 767px) {
+                        display: none;
+                    }
+                }
             }
         }
     }
@@ -73,6 +97,11 @@
         font-size: rem(28);
         line-height: 1.29;
         color: $black;
+        @media (max-width: 767px) {
+            margin-bottom: 28px;
+            font-size: rem(24);
+            line-height: 1.33;
+        }
     }
 
     &__inline {
@@ -83,6 +112,16 @@
             justify-content: flex-start;
             margin-bottom: 48px;
             margin-top: 24px;
+            @media (max-width: 767px) {
+                flex-wrap: wrap;
+                border: 1px solid $border-10;
+                padding: 8px;
+                margin-bottom: 24px;
+                margin-right: 0;
+                margin-left: 0;
+                border-radius: 5px;
+                background-color: $silver-light;
+            }
         }
 
         &-img {
@@ -91,6 +130,10 @@
             width: 40%;
             overflow: hidden;
             border-radius: 5px;
+            @media (max-width: 767px) {
+                width: 100%;
+                margin-bottom: 12px;
+            }
 
             &-inner {
                 display: block;
@@ -121,6 +164,10 @@
             justify-content: flex-start;
             width: 60%;
             padding-left: 32px;
+            @media (max-width: 767px) {
+                width: 100%;
+                padding-left: 0;
+            }
 
             .text {
                 display: block;
@@ -146,6 +193,18 @@
             &__row {
                 justify-content: flex-start;
                 max-width: none;
+                @media (max-width: 767px) {
+                    width: auto;
+                }
+            }
+
+            &__item {
+                @media (max-width: 767px) {
+                    margin: 0 4px 8px 0;
+                    &:last-of-type {
+                        margin-right: 0;
+                    }
+                }
             }
         }
 
@@ -153,6 +212,22 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
+            @media (max-width: 767px) {
+                justify-content: space-between;
+                position: fixed;
+                z-index: 10;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                padding: 8px 20px;
+                box-shadow: 0 -4px 20px 0 rgba(0, 0, 0, 0.1);
+                background-color: #ffffff;
+
+                .view, .comment {
+                    display: none;
+                }
+            }
 
             &-item {
                 margin-right: 32px;
@@ -161,12 +236,18 @@
                 color: $text-silver;
                 display: flex;
                 align-items: center;
+                @media (max-width: 767px) {
+                    margin-right: inherit;
+                }
 
                 .icon {
                     width: 24px;
                     height: 24px;
                     vertical-align: middle;
                     margin-right: 8px;
+                    @media (max-width: 767px) {
+                        margin-right: 4px;
+                    }
                 }
 
                 .btn {
@@ -182,6 +263,23 @@
         }
     }
 
+    &__author {
+        a {
+            font-size: rem(20);
+            line-height: 1.6;
+            border-bottom: 1px solid $coral;
+            color: $text-black;
+            word-break: break-word;
+            @media (max-width: 767px) {
+                font-size: rem(18);
+                line-height: 1.56;
+            }
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
+
     p {
         margin-bottom: 32px;
         font-size: rem(20);
@@ -189,17 +287,9 @@
         line-height: 1.6;
         letter-spacing: normal;
         color: $black;
-    }
-
-    &__author {
-        a {
-            font-size: rem(20);
-            line-height: 1.6;
-            border-bottom: 1px solid $coral;
-            color: $text-black;
-            &:hover {
-                text-decoration: none;
-            }
+        @media (max-width: 767px) {
+            font-size: rem(18);
+            line-height: 1.56;
         }
     }
 }
