--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -7,12 +7,12 @@
         </div>
     </div>
     <main class="news">
-        <div class="row">
+        <div class="row news__row">
             <div class="col-12 main-header">
                 <h1>Новости</h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row news__row">
             <div class="col-12">
                 <form action="" class="sorting-form">
                     {% include 'select/select.html' %}
