--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -9,14 +9,14 @@
             <div class="progress-bar" role="progressbar" style="" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div class="row justify-content-center">
-            <div class='col-md-10 article__header'>
+            <div class='col-xl-10 col-lg-12 article__header'>
                 <h1 class="article__header-title">Галерея на странице статьи (и её состояния)</h1>
                 <div class="article__header-info">
                     <div class="article__header-info-item">5 мая 2019</div>
                     <div class="article__header-info-item"><i class="icon icon--like-gray"></i>12</div>
                     <div class="article__header-info-item"><i class="icon icon--view-gray"></i>104</div>
                     <div class="article__header-info-item"><i class="icon icon--comment-gray"></i>32</div>
-                    <div class="article__header-info-item">
+                    <div class="article__header-info-item share">
                         <button class="btn">
                             <i class="icon icon--share-gray"></i>
                             Поделиться
@@ -25,14 +25,14 @@
                 </div>
             </div>
 
-            <div class='col-md-8'>
+            <div class='col-xl-8 col-lg-10'>
                 <div class="article__intro">
                     Используемая правительством модель экономической стабилизации обеспечила макроэкономическую
                     устойчивость, однако экономика России так и не вышла на траекторию стабильного роста и развития,
                     считают в партии «Справедливая Россия».
                 </div>
             </div>
-            <div class='col-md-8'>
+            <div class='col-xl-8 col-lg-10'>
                 <div class="thumbs-slider">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
                         <div class="swiper-wrapper">
@@ -390,7 +390,7 @@
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к 2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются на уровне 1,7%, в 2021 году — 3,1%, в 2022 году — 3,2%. Убедительного обоснования таких темпов роста экономики, а также ускорения инвестиций в основной капитал в проекте федерального бюджета нет, подчеркнул он.</p>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-xl-10 col-lg-10">
                 <div class="thumbs-slider">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
                         <div class="swiper-wrapper">
@@ -608,7 +608,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <div class="thumbs-slider thumbs-slider--border">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
                         <div class="swiper-wrapper">
@@ -825,7 +825,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <p>«Обратной стороной достижений стало снижение драйверов экономического роста, прежде всего потребительского спроса, низкое качество планирования, неэффективное использование бюджетных средств, низкий за последние 15 лет уровень исполнения расходов, формирование огромных объемов зарезервированных средств на стадии принятия бюджета», — сказал справедливорос Александр Ремезков.</p>
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к
                     2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются
@@ -834,7 +834,7 @@
                     подчеркнул он.</p>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-xl-10 col-12">
                 <table class="table">
                     <thead>
                     <tr>
@@ -1113,7 +1113,7 @@
                 </table>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <p>«Обратной стороной достижений стало снижение драйверов экономического роста, прежде всего потребительского спроса, низкое качество планирования, неэффективное использование бюджетных средств, низкий за последние 15 лет уровень исполнения расходов, формирование огромных объемов зарезервированных средств на стадии принятия бюджета», — сказал справедливорос Александр Ремезков.</p>
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к
                     2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются
@@ -1122,7 +1122,7 @@
                     подчеркнул он.</p>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-xl-10 col-12">
                 <div class="row no-gutter article__inline-item">
                     <div class="article__inline-img">
                         <picture class="article__inline-img-inner">
@@ -1139,11 +1139,11 @@
                 </div>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 {% include 'spoiler/spoiler.html' %}
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <p>«Обратной стороной достижений стало снижение драйверов экономического роста, прежде всего потребительского спроса, низкое качество планирования, неэффективное использование бюджетных средств, низкий за последние 15 лет уровень исполнения расходов, формирование огромных объемов зарезервированных средств на стадии принятия бюджета», — сказал справедливорос Александр Ремезков.</p>
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к
                     2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются
@@ -1152,10 +1152,11 @@
                     подчеркнул он.</p>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-xl-10 col-lg-10">
                 {% include 'text-logo/text-logo.html' %}
             </div>
-            <div class="col-md-8">
+
+            <div class="col-xl-8 col-lg-10">
                 <p>«Обратной стороной достижений стало снижение драйверов экономического роста, прежде всего потребительского спроса, низкое качество планирования, неэффективное использование бюджетных средств, низкий за последние 15 лет уровень исполнения расходов, формирование огромных объемов зарезервированных средств на стадии принятия бюджета», — сказал справедливорос Александр Ремезков.</p>
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к
                     2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются
@@ -1164,11 +1165,11 @@
                     подчеркнул он.</p>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-xl-10 col-lg-10">
                 {% include 'universal-form/universal-form.html' %}
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <p>«Обратной стороной достижений стало снижение драйверов экономического роста, прежде всего потребительского спроса, низкое качество планирования, неэффективное использование бюджетных средств, низкий за последние 15 лет уровень исполнения расходов, формирование огромных объемов зарезервированных средств на стадии принятия бюджета», — сказал справедливорос Александр Ремезков.</p>
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к
                     2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются
@@ -1177,11 +1178,11 @@
                     подчеркнул он.</p>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 {% include 'document-list/document-list.html' %}
             </div>
 
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <p>Темпы роста экономики, прогнозируемые правительством, не позволят увеличить ВВП на душу населения к
                     2024 году в 1,5 раза, подчеркнул депутат. Согласно прогнозу, в 2020 году темпы роста ВВП ожидаются
                     на уровне 1,7%, в 2021 году — 3,1%, в 2022 году — 3,2%. Убедительного обоснования таких темпов роста
@@ -1193,7 +1194,7 @@
         </div>
         
         <div class="row gallery justify-content-md-center gallery--grid">
-            <div class="col-md-10 row">
+            <div class="col-xl-10 col-lg-10 row">
                 <div class="gallery__item">
                     <picture class="gallery__item-inner">
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
@@ -1278,7 +1279,7 @@
         </div>
 
         <div class="row gallery justify-content-md-center gallery--mosaic">
-            <div class="col-md-10 row">
+            <div class="col-xl-10 col-lg-10 row">
                 <div class="gallery__item">
                     <picture class="gallery__item-inner">
                         <!--[if IE 9]>
@@ -1355,8 +1356,8 @@
                             <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                         </div>
                     </div>
-                    <div class="article__footer-info-item"><i class="icon icon--view-gray"></i>104</div>
-                    <div class="article__footer-info-item"><i class="icon icon--comment-gray"></i>32</div>
+                    <div class="article__footer-info-item view"><i class="icon icon--view-gray"></i>104</div>
+                    <div class="article__footer-info-item comment"><i class="icon icon--comment-gray"></i>32</div>
                     <div class="article__footer-info-item">
                         <button class="btn">
                             <i class="icon icon--share-gray"></i>
@@ -1368,7 +1369,7 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 {% include 'comments/comments.html' %}
             </div>
         </div>
