fix responsive news-page and text page

--- a/src/blocks/modules/dataselect/dataselect.scss
+++ b/src/blocks/modules/dataselect/dataselect.scss
@@ -28,6 +28,9 @@
             background-size: contain;
             background-repeat: no-repeat;
         }
+        &:focus {
+            box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+        }
     }
 
     &__result {
