--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -391,7 +391,7 @@
             </div>
 
             <div class="col-xl-10 col-lg-10">
-                <div class="thumbs-slider">
+                <div class="thumbs-slider thumbs-slider--desc ">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -609,7 +609,7 @@
             </div>
 
             <div class="col-xl-8 col-lg-10">
-                <div class="thumbs-slider thumbs-slider--border">
+                <div class="thumbs-slider thumbs-slider--desc thumbs-slider--border">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
