--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -96,6 +96,8 @@
             position: relative;
             width: 100%;
             height: auto;
+            border-radius: 5px;
+            overflow: hidden;
 
             &::before {
                 @include transition();
@@ -112,12 +114,12 @@
         }
 
         &-img {
+            box-sizing: border-box;
             display: block;
             position: relative;
             width: 100%;
-            padding-bottom: 66.3%;
             overflow: hidden;
-            border-radius: 5px;
+            padding-bottom: 66.3%;
             background-color: $silver-dark;
 
             img {
@@ -126,8 +128,8 @@
                 top: 50%;
                 left: 50%;
                 max-width: 100%;
-                height: 100%;
                 max-height: 100%;
+                margin: auto;
                 transform: translate(-50%, -50%);
             }
         }
@@ -178,6 +180,7 @@
         }
 
         &-img {
+            box-sizing: border-box;
             display: block;
             position: relative;
             width: 100%;
@@ -190,9 +193,10 @@
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                max-width: 100%;
+                width: 100%;
                 height: 100%;
-                max-height: 100%;
+                object-fit: cover;
+                margin: auto;
                 transform: translate(-50%, -50%);
             }
         }
@@ -223,24 +227,30 @@
             font-size: rem(16);
             font-weight: $font-weight-bold;
             line-height: 1.5;
+            @media (max-width: 767px) {
+                width: 100%;
+            }
         }
 
         .text {
             width: 70%;
             font-size: rem(14);
             line-height: 1.43;
+            @media (max-width: 767px) {
+                width: 100%;
+            }
         }
     }
 
     &--border {
 
-        .thumbs-slider__main-img {
+        .swiper-slide {
             border-radius: 5px 5px 0 0;
         }
 
         .thumbs-slider__description {
             border: solid 1px $border-10;
-            padding: 12px 0 12px 20px;
+            padding: 12px 20px 12px 20px;
             border-radius: 0 0 5px 5px;
         }
     }
