--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -5,6 +5,13 @@
     @media (max-width: 767px) {
         padding-top: 16px;
     }
+
+    @media (max-width: 414px) {
+        .thumbs-slider:not(.thumbs-slider--desc) {
+            margin-right: -16px;
+            margin-left: -16px;
+        }
+    }
     .progress {
         display: flex;
         position: fixed;
@@ -34,7 +41,7 @@
         text-align: center;
 
         &-title {
-            margin-bottom: 40px;
+            margin-bottom: 32px;
             @media (max-width: 767px) {
                 font-size: rem(32);
                 line-height: 1.25;
@@ -47,10 +54,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-bottom: 32px;
+            margin-bottom: 20px;
             @media (max-width: 767px) {
-                margin-bottom: 24px;
-                justify-content: space-around;
+                margin-bottom: 12px;
+                justify-content: flex-start;
             }
 
             &-item {
@@ -59,7 +66,14 @@
                 line-height: 1.25;
                 color: $text-silver;
                 @media (max-width: 767px) {
-                    margin: 0 auto 0;
+                    margin: 0 16px 0 0;
+                    &:last-of-type {
+                        margin-right: 0;
+                    }
+                }
+                @media (max-width: 400px) {
+                    font-size: rem(14);
+                    margin-right: 12px;
                 }
 
                 .icon {
@@ -179,6 +193,7 @@
 
             .btn {
                 display: inline-block;
+                padding-bottom: 8px;
             }
         }
     }
